--- a/style/constants.less
+++ b/style/constants.less
@@ -10,6 +10,8 @@
 @small-space: 8px;
 @medium-space: 12px;
 @large-space: 24px;
+@header-height: 80px;
+@footer-height: 80px;
 // ========= Spacing End =============
 
 
