--- a/src/components/Header/Header.style.less
+++ b/src/components/Header/Header.style.less
@@ -2,20 +2,21 @@
 
 .header-container {
   height: @header-height;
-  padding: 30px 30px 10px 30px;
+  padding: 10px 30px 0px 30px;
   border-bottom: 1px solid @light-gray;
   display: flex;
 
   .logo-container {
     flex-grow: 1;
+    margin: auto;
     .header-logo {
-      height: 50px;
+      height: 40px;
     }
   }
 
   .nav-menu-container {
-    flex-grow: 10;
     text-align: right;
+    margin: auto;
     .nav-menu-list {
       list-style: none;
       margin: 0px;
@@ -26,7 +27,7 @@
           text-decoration: none;
         }
       }
-      li {
+      p {
         display: inline-block;
         padding: 0px 15px;
       }
