--- a/src/components/Dropdown/dropdown.style.less
+++ b/src/components/Dropdown/dropdown.style.less
@@ -14,7 +14,8 @@
   }
 
   .dropdown-toggle {
-    min-width: 200px;
+    // min-width: 200px;
+    width: 100%;
     height: 32px;
     border: 2px solid @light-gray;
     background: unset;
@@ -28,12 +29,12 @@
     }
 
     .dropdown-toggle-text {
-      width: 50%;
+      width: 90%;
       text-align: left;
     }
 
     .dropdown-toggle-caret {
-      width: 50%;
+      width: 10%;
       text-align: right;
       color: @light-gray;
       position: relative;
@@ -70,8 +71,9 @@
       padding: 0px;
       margin: 0px;
 
-      &:focus {
+      &:hover {
         background: @light-orange;
+        outline: none;
       }
     }
 
