--- a/src/components/CarList/CarList.style.less
+++ b/src/components/CarList/CarList.style.less
@@ -1,5 +1,15 @@
 @import '../../../style/constants.less';
 
+.car-list-pagination {
+  display: flex;
+  justify-content: center;
+  a {
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
 .car-list-container {
   display: flex;
   padding: 20px;
