--- a/src/components/CarList/CarList.style.less
+++ b/src/components/CarList/CarList.style.less
@@ -24,6 +24,13 @@
     padding: 0px 20px 0px 20px;
 
     .car-list-header {
+      display: flex;
+      .list-numbers {
+        flex-grow: 3;
+      }
+      .list-sort-container {
+        flex-grow: 1;
+      }
       h2 {
         margin: 0px;
       }
